Feature/add courses to study plan (#38)
* #32 wip

* #32 service logic for adding courses to plan

* #32 add new client request

* #32 fix tests

* #32 add tests

* #32 fix ois response

* #32 improve db queries

* #32 refactor

* #32 more refactor and PR fixes

* #32 add tests

---------

Co-authored-by: Kaisa Karjus <kaisakarjus@Kaisas-Air.lan>